# cargo-dupes

./: .dupes-ignore.toml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cog.toml
.cargo-husky/hooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml
cargo-dupes/: CHANGELOG.md  Cargo.toml
cargo-dupes/src/: lib.rs  main.rs  normalizer.rs  parser.rs
cargo-dupes/tests/: check.rs  cli_integration.rs  core_with_syn_tests.rs  ignore.rs  options.rs  report.rs  sub_function.rs
cargo-dupes/tests/common/: mod.rs
cargo-dupes/tests/fixtures/sub_function_dupes/: Cargo.toml
cargo-dupes/tests/fixtures/sub_function_dupes/src/: lib.rs
ci/: check-file-sizes.sh
code-dupes/: CHANGELOG.md  Cargo.toml
code-dupes/src/: main.rs
code-dupes/tests/: check.rs  ignore.rs  language.rs  options.rs  report.rs  sub_function.rs
code-dupes/tests/common/: mod.rs
code-dupes/tests/fixtures/python_dupes/: class_dupes.py  dupes.py  lambda_dupes.py
code-dupes/tests/fixtures/python_no_dupes/: unique.py
code-dupes/tests/fixtures/python_test_code/: test_math.py
dupes-core/: CHANGELOG.md  Cargo.toml
dupes-core/src/: analyzer.rs  cli.rs  code_unit.rs  config.rs  error.rs  extractor.rs  fingerprint.rs  grouper.rs  ignore.rs  lib.rs  node.rs  scanner.rs  similarity.rs
dupes-core/src/output/: json.rs  mod.rs  text.rs
dupes-python/: CHANGELOG.md  Cargo.toml
dupes-python/src/: lib.rs
dupes-python/tests/: core_with_python_tests.rs  integration.rs
dupes-rust/: CHANGELOG.md  Cargo.toml
dupes-rust/src/: lib.rs  normalizer.rs  parser.rs
dupes-rust/src/normalizer/: expr.rs  helpers.rs  mod.rs  pat.rs  tests.rs
dupes-rust/tests/: core_with_syn_tests.rs
dupes-treesitter/: CHANGELOG.md  Cargo.toml
dupes-treesitter/src/: analyzer.rs  extractor.rs  lib.rs  mapping.rs  normalizer.rs
dupes-treesitter/tests/: python_integration.rs
src/: config.rs  error.rs  extractor.rs  fingerprint.rs  grouper.rs  ignore.rs  lib.rs  main.rs  normalizer.rs  parser.rs  similarity.rs
src/output/: json.rs  mod.rs  text.rs
tests/: cli_integration.rs
tests/fixtures/exact_dupes/: Cargo.toml
tests/fixtures/exact_dupes/src/: lib.rs
tests/fixtures/mixed/: Cargo.toml
tests/fixtures/mixed/src/: lib.rs
tests/fixtures/near_dupes/: Cargo.toml
tests/fixtures/near_dupes/src/: lib.rs
tests/fixtures/no_dupes/: Cargo.toml
tests/fixtures/no_dupes/src/: lib.rs
tests/fixtures/test_code/: Cargo.toml
tests/fixtures/test_code/src/: lib.rs
