[package]
name = "cargo-dupes"
version = "0.1.6"
edition = "2024"
description = "A cargo subcommand that detects duplicate and near-duplicate code blocks in Rust codebases using AST normalization"
license = "MIT"
repository = "https://github.com/mpecan/cargo-dupes"
homepage = "https://github.com/mpecan/cargo-dupes"
readme = "README.md"
keywords = ["cargo", "duplicates", "code-quality", "lint", "ast"]
categories = ["development-tools::cargo-plugins", "development-tools"]
authors = ["Matjaz Domen Pecan <matjaz.pecan@gmail.com>"]
rust-version = "1.93"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["user-hooks"]
