[workspace]
members = ["dupes-core", "dupes-rust", "cargo-dupes"]
resolver = "3"

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/mpecan/cargo-dupes"
authors = ["Matjaz Domen Pecan <matjaz.pecan@gmail.com>"]
rust-version = "1.93"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
thiserror = "2"
tempfile = "3"
