[workspace]
members = ["dupes-core", "dupes-rust", "cargo-dupes", "code-dupes"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mpecan/cargo-dupes"
authors = ["Matjaz Domen Pecan <matjaz.pecan@gmail.com>"]
rust-version = "1.93"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow impractical pedantic lints
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
too_long_first_doc_paragraph = "allow"
cognitive_complexity = "warn"
module_name_repetitions = "allow"
implicit_hasher = "allow"
option_if_let_else = "allow"
useless_let_if_seq = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
thiserror = "2"
tempfile = "3"
