[package]
name = "cargo-dupes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A cargo subcommand that detects duplicate and near-duplicate code blocks in Rust codebases using AST normalization"
homepage = "https://github.com/mpecan/cargo-dupes"
readme = "../README.md"
keywords = ["cargo", "duplicates", "code-quality", "lint", "ast"]
categories = ["development-tools::cargo-plugins", "development-tools"]

[dependencies]
dupes-core = { path = "../dupes-core", version = "0.1.5" }
dupes-rust = { path = "../dupes-rust", version = "0.1.5" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["user-hooks"]
