[package]
name = "code-dupes"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A multi-language CLI tool that detects duplicate and near-duplicate code blocks using AST normalization"
homepage = "https://github.com/mpecan/cargo-dupes"
readme = "../README.md"
keywords = ["duplicates", "code-quality", "lint", "ast"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
dupes-core = { path = "../dupes-core", version = "0.2.2", features = ["cli"] }
dupes-python = { path = "../dupes-python", version = "0.2.2" }
dupes-rust = { path = "../dupes-rust", version = "0.2.2" }
clap = { version = "4", features = ["derive"] }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
serde_json = { workspace = true }
