[package]
name = "dupes-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core library for detecting duplicate and near-duplicate code blocks"
readme = "../README.md"
keywords = ["duplicates", "code-quality", "lint", "ast"]
categories = ["development-tools"]

[lints]
workspace = true

[features]
cli = ["clap"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
